# rp_interface

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
docs/: example_project.md  paul_trap_feedback_controller.md
fpga/pll/: block_design.tcl  create_project.tcl  pll_controller.bit
fpga/pll/docs/: Readme.txt  pll_addresses.xlsx  regs.xlsx
fpga/pll/testbenches/: test_bench_template_tb.v
fpga/pll/verilog/: mux_8x1.v  my_module.v  sample_and_hold.v  simple_multiplier_internal.v
fpga/pll/vhdl/: dac_out_switch.vhd  dec_filter.vhd  exp_avg_filter.vhd  exp_avg_filter_order.vhd  freq_div.vhd  mult_n_1.vhd  nco_driver_2.vhd  pid_w_range.vhd  weight_sum.vhd
fpga/pt_feedback/: block_design.tcl  paul_trap_feedback_controller.bit
fpga/pt_feedback/constraints/: clocks.xdc  ports.xdc
fpga/pt_feedback/docs/: pt_feedback_addresses.xlsx
fpga/pt_feedback/testbenches/: biquad_filter_tb.v  bram_delay_line_tb.v  coarse_delay_line_tb.v  decimate_tb.v  fine_delay_line_tb.v  fine_delay_stage_tb.v
fpga/redpitaya_example_project/: block_design.tcl  create_project.tcl  example_project.bit
redpitaya-interface/bitfiles/: aom_red_pitaya_config.md
rp_interface/: red_pitaya_aom.py
src/redpitaya-interface/: red_pitaya_aom.py  red_pitaya_comms.py
src/rp_interface/: aom_controller.py  gui_utils.py  paul_trap_feedback_controller.py  red_pitaya.py  red_pitaya_aom.py  red_pitaya_bitfile.py  red_pitaya_comms.py  red_pitaya_control.py  red_pitaya_controller.py  red_pitaya_module.py  red_pitaya_parameter.py  red_pitaya_register.py  utils.py
(+92 files in other folders)
