[metadata]
name = rp_interface
version = 0.5.0
author = Eric Bonvin
author_email = ebonvin@ethz.ch
description = A package for interfacing with a Red Pitaya
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.ethz.ch/ebonvin/rp_interface
project_urls =
    Bug Tracker = https://gitlab.ethz.ch/ebonvin/rp_interface/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    paramiko>=2.8.0
include_package_data = True

[options.packages.find]
where = src
